--- a/FrontMoneyMentor/package.json
+++ b/FrontMoneyMentor/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.9",
+    "@auth0/angular-jwt": "^5.2.0",
     "chart.js": "^4.3.0",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
